Added different UI

--- a/views/index.html
+++ b/views/index.html
@@ -10,17 +10,12 @@
 	</head>
 	<body>
 		<div class="container" ng-controller="AppCtrl">
-
-			<h1>HELLO WORLD!</h1>
-
-			<table class="table">
-				<thread>
-					<tr>
-						<th>Name</th>
-						<th>Email</th>
-						<th>Number</th>
-					</tr>
-				</thread>
+			<form>
+                First name:<br>
+                <input type="text" name="firstname"><br>
+                Last name:<br>
+                <input type="text" name="lastname">
+            </form>
 		</div> 
 		<script src ="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
 		<script src = "controllers/controller.js"></script>
